--- a/JS_enshu/Sample2_03.html
+++ b/JS_enshu/Sample2_03.html
@@ -5,5 +5,11 @@
     <title>Sample2_03</title>
   </head>
   <body>
+    <h2>挨拶のページ</h2>
+    <script>
+      let name;
+      name = window.prompt('あなたの名前は？');
+      document.write('こんにちは' + name + 'さん');
+    </script>
   </body>
 </html>
