--- a/JS_enshu/Sample2_14.html
+++ b/JS_enshu/Sample2_14.html
@@ -6,11 +6,17 @@
   </head>
   <body>
     <h2>1〜100までの合計を求める</h2>
+    <p>(合計が1000を超えたら加算を止める)</p>
     <script>
       let sum = 0;
-      for( let i = 0; i <= 100; i++ ) {
+      let i;
+      for( i = 1; i <= 100; i++ ) {
         sum = sum + i;
+        if ( sum > 1000 ) {
+          break;
+        }
       }
+      document.write( i + '<br>');
       document.write(sum + '<br>');
     </script>
   </body>
