--- a/JS_enshu/Sample2_16.html
+++ b/JS_enshu/Sample2_16.html
@@ -7,7 +7,18 @@
   <body>
     <h2>配列要素の追加・削除</h2>
     <script>
-      
+      let fruits = ['リンゴ', 'バナナ', 'みかん'];
+      document.write( fruits + '<br><br>');
+
+      // 配列の追加
+      document.write('---" ぶどう ", "なし "を追加する---<br>');
+      fruits.push('ぶどう', 'なし');
+      document.write( fruits + '<br><br>' );
+
+      // 配列の削除
+      document.write('---配列の末尾を削除する---<br>');
+      fruits.pop();
+      document.write(fruits + '<br><br>');
     </script>
   </body>
 </html>
