--- a/JS_enshu/Sample3_01.html
+++ b/JS_enshu/Sample3_01.html
@@ -14,7 +14,7 @@
     <h2>30H_JSのこよみ先生</h2>
     <p>頑張って勉強していきましょう</p>
     <input type="button" value="はい！" onclick="transform()" />
-    <input type="button" value="いいえ・・・" oneclick="dispYell()" /><br>
+    <input type="button" value="いいえ・・・" onclick="dispYell()" /><br>
     <img id="teacherImg" src="./images/pink3.jpg" alt="こよみ先生" />
     <script>
     let dispYell = function() {
