--- a/JS_enshu/Sample3_03.html
+++ b/JS_enshu/Sample3_03.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h2>30H_JSのこよみ先生</h2>
-    <p id="teacherImg">JavaScriptは面白いですか？</p>
+    <p id="message">JavaScriptは面白いですか？</p>
     <input type="button" value="とっても！" onclick="disp()" />
     <input type="button" value="ちょっとむずかしい・・・" onclick="stopDisp()" /><br>
     <img id="teacherImg" src="./images/yellow6.jpg" alt="こよみ先生" />
